@@ -1,5 +1,5 @@
 /* Libvoikko: Finnish spellchecker and hyphenator library
- * Copyright (C) 2006 - 2009 Harri Pitkänen <hatapitk@iki.fi>
+ * Copyright (C) 2006 - 2010 Harri Pitkänen <hatapitk@iki.fi>
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -20,115 +20,18 @@
 #include "utils/StringUtils.hpp"
 #include "character/charset.hpp"
 #include "character/SimpleChar.hpp"
-#include "spellchecker/spell.hpp"
-#include "spellchecker/SpellUtils.hpp"
+#include "spellchecker/Speller.hpp"
+#include "setup/setup.hpp"
 #include "porting.h"
 #include <cstdlib>
 #include <cstring>
 #include <cwchar>
 
-using namespace libvoikko::morphology;
 using namespace libvoikko::spellchecker;
 using namespace libvoikko::character;
 using namespace std;
 
 namespace libvoikko {
-
-spellresult voikko_do_spell(voikko_options_t * voikkoOptions,
-	                   const wchar_t * word, size_t len) {
-	spellresult result_with_border = SPELL_FAILED;
-	spellresult result_without_border = SPELL_FAILED;
-	
-	spellresult result = voikkoOptions->speller->spell(word, len);
-	const wchar_t * hyphen_pos;
-	if (result != SPELL_OK && len > 3) {
-		hyphen_pos = wmemchr(word + 1, L'-', len - 2);
-	}
-	else {
-		hyphen_pos = 0;
-	}
-	
-	if (hyphen_pos) { /* Check optional hyphens */
-		size_t leading_len = hyphen_pos - word;
-		wchar_t * buffer = new wchar_t[len];
-		wcsncpy(buffer, word, leading_len);
-		wcsncpy(buffer + leading_len, hyphen_pos + 1, len - leading_len - 1);
-		buffer[len - 1] = L'\0';
-		
-		if (voikkoOptions->accept_extra_hyphens && leading_len > 1 &&
-		    buffer[leading_len] != L'-') {
-			/* All hyphens are optional */
-			/* FIXME: deep recursion */
-			spellresult spres = voikko_do_spell(voikkoOptions, buffer, len - 1);
-			if (spres == SPELL_OK) {
-				delete[] buffer;
-				return spres;
-			}
-		}
-		
-		/* Leading part ends with the same VC pair as the trailing part starts ('pop-opisto') */
-		if (leading_len >= 2 && len - leading_len >= 3) {
-			wchar_t vctest1 = SimpleChar::lower(word[leading_len - 2]);
-			wchar_t vctest2 = SimpleChar::lower(word[leading_len - 1]);
-			if (wcschr(VOIKKO_VOWELS, vctest1) &&
-			    wcschr(VOIKKO_CONSONANTS, vctest2) &&
-			    SimpleChar::lower(word[leading_len + 1]) == vctest1 &&
-			    SimpleChar::lower(word[leading_len + 2]) == vctest2) {
-				spellresult spres = voikkoOptions->speller->spell(buffer, len - 1);
-				if (spres != SPELL_FAILED && (result == SPELL_FAILED || result > spres)) {
-					delete[] buffer;
-					return spres;
-				}
-			}
-		}
-		
-		/* Ambiguous compound ('syy-silta', 'syys-ilta') */
-		list<Analysis *> * analyses = voikkoOptions->morAnalyzer->analyze(buffer);
-		
-		if (analyses->empty()) {
-			Analyzer::deleteAnalyses(analyses);
-			delete[] buffer;
-			return result;
-		}
-		
-		list<Analysis *>::const_iterator it = analyses->begin();
-		while (it != analyses->end()) {
-			const wchar_t * structure = (*it)->getValue("STRUCTURE");
-			size_t j = 0;
-			size_t i;
-			for (i = 0; i < leading_len; i++) {
-				while (structure[j] == L'=') {
-					j++;
-				}
-				if (structure[j] == L'\0') {
-					break;
-				}
-				j++;
-			}
-			if (i == leading_len) {
-				spellresult spres = SpellUtils::matchWordAndAnalysis(buffer, len - 1, structure);
-				if (structure[j] == L'=' && (result_with_border == SPELL_FAILED ||
-				    result_with_border > spres)) {
-					result_with_border = spres;
-				}
-				if (structure[j] != L'=' && (result_without_border == SPELL_FAILED ||
-				    result_without_border > spres)) {
-					result_without_border = spres;
-				}
-			}
-			it++;
-		}
-		
-		Analyzer::deleteAnalyses(analyses);
-		delete[] buffer;
-		if (result_with_border != SPELL_FAILED && result_without_border != SPELL_FAILED &&
-		    (result == SPELL_FAILED || result > result_with_border)) {
-			return result_with_border;
-		}
-	}
-	
-	return result;
-}
 
 /**
  * Checks the spelling of given word. Missing hyphens at the start or end of the
@@ -139,7 +42,7 @@ spellresult voikko_do_spell(voikko_options_t * voikkoOptions,
  */
 static spellresult hyphenAwareSpell(voikko_options_t * voikkoOptions,
 	                                   const wchar_t * word, size_t len) {
-	spellresult spres = voikko_do_spell(voikkoOptions, word, len);
+	spellresult spres = voikkoOptions->speller->spell(word, len);
 	if (spres != SPELL_FAILED || !voikkoOptions->accept_missing_hyphens) {
 		return spres;
 	}
@@ -161,7 +64,7 @@ static spellresult hyphenAwareSpell(voikko_options_t * voikkoOptions,
 			newlen++;
 		}
 	}
-	spres = voikko_do_spell(voikkoOptions, buffer, newlen);
+	spres = voikkoOptions->speller->spell(buffer, newlen);
 	delete[] buffer;
 	return spres;
 }
