@@ -1,3 +1,6 @@
+2010-08-21 Harri Pitkänen <hatapitk@iki.fi>
+	* Separate Finnish/Malaga specific speller tweaks from common speller code.
+
 2010-06-30 Harri Pitkänen <hatapitk@iki.fi>
 	* Support using language codes other than Finnish as the real language (Trac #15).
 
